--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^2.3.0",
     "gulp-inject": "^4.2.0",
+    "gulp-json-format": "^2.0.0",
     "gulp-real-favicon": "^0.2.2",
     "gulp-sequence": "^0.4.6",
     "gulp-watch": "^4.3.11",
